# Vulkan-Base

./: .gitmodules  CMakeLists.txt  main.cpp
.cache/clangd/index/: main.cpp.3718523AB145DB40.idx  main.cpp.4739862048277CE8.idx
.github/: FUNDING.yml  README.md
app/: CMakeLists.txt  main.cpp
include/: types.hpp
include/math/: vec.hpp
include/types/: model.hpp
include/vk/: debug.hpp  vk.hpp  window.hpp
shaders/triangle/: triangle.frag  triangle.vert  vert.spv
src/: debug.cpp  main.cpp  pipeline.cpp  vector.cpp  vk.cpp  window.cpp
src/include/: mat.hpp  types.hpp  vec.hpp  vector.hpp  vk.hpp  vktk.hpp
src/include/vk/: debug.hpp  pipeline.hpp  vk.hpp  window.hpp
src/types/: model.cpp
